--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/rpx-xui-node-lib",
-  "version": "2.26.4",
+  "version": "2.26.3",
   "description": "Common Nodejs library components for XUI",
   "main": "dist/index",
   "types": "dist/index.d.ts",
@@ -94,7 +94,7 @@
     "jest-mock-axios": "^4.2.0",
     "jest-ts-auto-mock": "^1.0.11",
     "jwt-decode": "^2.2.0",
-    "openid-client": "^3.10.0",
+    "openid-client": "4.0.0",
     "otplib": "^12.0.1",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
