fix: reverted back to a previously working and compiling state (#187)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest --env node",
     "test:coverage": "jest --env node --coverage",
     "build": "tsc --declarationMap --sourceMap",
+    "build:watch": "tsc --declarationMap --sourceMap --watch",
     "lint": "eslint \"*/**/*.{js,ts}\" --quiet --fix",
     "commit": "git cz",
     "ci:lint": "eslint \"*/**/*.{js,ts}\" --quiet",
