test: test Yarn upgrade (#194)

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,11 @@ testem.log
 /typings
 /reports
 api/.nyc_output
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
