--- a/package.json
+++ b/package.json
@@ -103,5 +103,6 @@
     "session-file-store": "^1.3.1",
     "ts-auto-mock": "^2.2.5",
     "ttypescript": "^1.5.10"
-  }
+  },
+  "packageManager": "yarn@3.4.1"
 }
