--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --env node",
+    "test:watch": "jest --env node --watch",
     "test:coverage": "jest --env node --coverage",
     "build": "tsc --declarationMap --sourceMap",
     "build:watch": "tsc --declarationMap --sourceMap --watch",
@@ -50,32 +51,33 @@
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
     "@types/hapi__joi": "^17.1.0",
-    "@types/jest": "^24.0.24",
+    "@types/jest": "^29.4.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.12.21",
     "@types/passport": "^1.0.2",
     "@types/passport-oauth2": "^1.4.9",
     "@types/session-file-store": "^1.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "commitizen": "^4.0.3",
     "commitlint-config-cz": "^0.13.1",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": ">=4",
-    "jest": "^26.0.1",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^27.5.1",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
     "semantic-release": "^17.0.8",
     "standard-version": "^7.0.1",
     "supports-color": "^7.1.0",
-    "ts-jest": "^26.1.0",
-    "ts-node": "^8.10.1",
-    "tslint": "^5.20.1",
+    "ts-jest": "^27.1.5",
+    "ts-node": "^10.8.1",
+    "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.9.3"
+    "typescript": "^4.0.8"
   },
   "config": {
     "commitizen": {
@@ -92,8 +94,8 @@
     "deepmerge": "^4.2.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "jest-mock-axios": "^4.2.0",
-    "jest-ts-auto-mock": "^1.0.11",
+    "jest-mock-axios": "^4.6.2",
+    "jest-ts-auto-mock": "^2.0.0",
     "jwt-decode": "^2.2.0",
     "openid-client": "^3.10.0",
     "otplib": "^12.0.1",
@@ -101,7 +103,7 @@
     "passport-oauth2": "^1.5.0",
     "redis": "^3.0.2",
     "session-file-store": "^1.3.1",
-    "ts-auto-mock": "^2.2.5",
-    "ttypescript": "^1.5.10"
+    "ts-auto-mock": "^3.5.0",
+    "ttypescript": "^1.5.13"
   }
 }
