--- a/package.json
+++ b/package.json
@@ -45,15 +45,15 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.1.0",
-    "@types/connect-redis": "^0.0.14",
+    "@types/connect-redis": "^0.0.23",
     "@types/csurf": "^1.9.36",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
-    "@types/express-session": "^1.15.16",
+    "@types/express-session": "1.17.10",
     "@types/hapi__joi": "^17.1.0",
     "@types/jest": "^29.4.0",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^12.12.21",
+    "@types/node": "^18.17.0",
     "@types/passport": "^1.0.2",
     "@types/passport-oauth2": "^1.4.9",
     "@types/session-file-store": "^1.2.1",
@@ -77,7 +77,7 @@
     "ts-node": "^10.8.1",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.0.8"
+    "typescript": "^4.8.2"
   },
   "config": {
     "commitizen": {
@@ -102,7 +102,7 @@
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "redis": "^3.0.2",
-    "session-file-store": "^1.3.1",
+    "session-file-store": "^1.5.0",
     "ts-auto-mock": "^3.5.0",
     "ttypescript": "^1.5.13"
   },
