fix: #EXUI-2531: Update yarn and node version for rpx-xui-node-lib

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,12 @@ testem.log
 api/.nyc_output
 .yarn/cache
 .yarn/install-state.gz
+
+# Yarn files
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
