--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+          corepack-enable: true
           registry-url: https://registry.npmjs.org/
       - run: yarn install
       - run: yarn ci
