--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -24,8 +24,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          corepack-enable: true
           registry-url: https://registry.npmjs.org/
+      - name: Enable corepack
+        run: |
+          corepack enable
+          corepack prepare yarn@4.5.1 --activate
+          yarn set version 4.5.1
       - run: yarn install
       - run: yarn ci
       - run: yarn publish
