--- a/.github/workflows/prbuild.yml
+++ b/.github/workflows/prbuild.yml
@@ -39,6 +39,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+      - name: Enable corepack
+        run: |
+          corepack enable
+          corepack prepare yarn@4.5.1 --activate
+          yarn set version 4.5.1
       - run: yarn install
       - run: yarn ci
       - run: yarn test
