--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -12,7 +12,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          corepack-enable: true
+      - name: Enable corepack
+        run: |
+          corepack enable
       - run: yarn install
       - run: yarn ci
       - run: yarn test
@@ -25,8 +27,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          corepack-enable: true
           registry-url: https://registry.npmjs.org/
+      - name: Enable corepack
+        run: |
+          corepack enable
       - run: yarn install
       - run: yarn ci
       - run: yarn publish
@@ -41,9 +45,11 @@ jobs:
       - uses: actions/setup-node@4
         with:
           node-version: 18
-          corepack-enable: true
           registry-url: https://npm.pkg.github.com/
           scope: '@hmcts'
+      - name: Enable corepack
+        run: |
+          corepack enable
       - run: yarn install
       - run: yarn ci
       - run: yarn publish
