--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -33,9 +33,10 @@ jobs:
           corepack enable
       - run: yarn install
       - run: yarn ci
-      - run: yarn publish
+      - run: yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NPM_PUBLISH_REGISTRY: https://npm.pkg.github.com/
 
   publish-gpr:
     needs: build
@@ -55,3 +56,4 @@ jobs:
       - run: yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NPM_PUBLISH_REGISTRY: https://npm.pkg.github.com/
