--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -33,7 +33,7 @@ jobs:
           corepack enable
       - run: yarn install
       - run: yarn ci
-      - run: yarn npm publish
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
           NPM_PUBLISH_REGISTRY: https://npm.pkg.github.com/
@@ -53,7 +53,7 @@ jobs:
           corepack enable
       - run: yarn install
       - run: yarn ci
-      - run: yarn npm publish
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NPM_PUBLISH_REGISTRY: https://npm.pkg.github.com/
