need yarn install after enable corepack

--- a/.github/workflows/prbuild.yml
+++ b/.github/workflows/prbuild.yml
@@ -110,6 +110,7 @@ jobs:
             - name: Enable corepack
               run: |
                   corepack enable
+            - run: yarn install
             - name: Install dependencies
               run: yarn ci
             - name: Semantic Release
